--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,8 @@ concurrency:
   group: build-and-release
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on:
+      - self-hosted
     steps:
       - name: configure environment
         id: name
