--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,8 @@ concurrency:
   group: build-and-release
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on:
+      - self-hosted
     steps:
       - name: configure environment
         id: name
@@ -19,4 +20,4 @@ jobs:
         uses: actions/checkout@v3
       - name: build
         run: |-
-          sleep 120
+          sleep 60
