--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,6 +4,7 @@ on: # yamllint disable-line rule:truthy
   push:
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - uses: alexellis/arkade-get@master
